# trend-lab-gamemode-doctor-260710

./: README.md  pyproject.toml
src/gamemode_doctor/: main.py
tests/: test_smoke.py
