[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamemode-doctor"
version = "0.1.0"
description = "Safe Windows gaming optimizer audit and report prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GameMode Doctor Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gamemode-doctor = "gamemode_doctor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]